--- a/my-app/package.json
+++ b/my-app/package.json
@@ -26,7 +26,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest __tests__/ --coverage",
     "eject": "react-scripts eject",
     "server": "json-server --watch db.json"
   },
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "jest": "^27.5.1"
   }
 }
