--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^5.0.0",
+    "react-test-renderer": "^17.0.2",
     "reactjs-popup": "^2.0.5",
     "short-id": "^0.1.0-1",
     "shortid": "^2.2.16",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "gh-pages": "^3.2.3",
     "jest": "^27.5.1"
   }
